appview/pages: spacing tweaks for new full width topbar/footer
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -41,13 +41,13 @@
 
           {{ block "mainLayout" . }}
             <div class="flex-grow">
-              <div class="max-w-screen-lg px-4 mx-auto my-6 flex flex-col gap-4">
+              <div class="max-w-screen-lg mx-auto flex flex-col gap-4">
                 {{ block "contentLayout" . }}
                 <main>
                   {{ block "content" . }}{{ end }}
                 </main>
                 {{ end }}
-                
+
                 {{ block "contentAfterLayout" . }}
                 <main>
                   {{ block "contentAfter" . }}{{ end }}
