appview: switch to indigo oauth library
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/layouts/fragments/topbar.html
+++ b/appview/pages/templates/layouts/fragments/topbar.html
@@ -51,7 +51,7 @@
     <summary
         class="cursor-pointer list-none flex items-center gap-1"
     >
-        {{ $user := didOrHandle .Did .Handle }}
+        {{ $user := .Did }}
         <img
             src="{{ tinyAvatar $user }}"
             alt=""
