appview/pages: add og meta tags
Signed-off-by: Anirudh Oppiliappan <anirudh@tangled.org>

--- a/appview/pages/templates/repo/fragments/og.html
+++ b/appview/pages/templates/repo/fragments/og.html
@@ -2,10 +2,18 @@
     {{ $title := or .Title .RepoInfo.FullName }}
     {{ $description := or .Description .RepoInfo.Description }}
     {{ $url := or .Url (printf "https://tangled.org/%s" .RepoInfo.FullName) }}
-
+    {{ $imageUrl := printf "https://tangled.org/%s/opengraph" .RepoInfo.FullName }}
 
     <meta property="og:title" content="{{ unescapeHtml $title }}" />
     <meta property="og:type" content="object" />
     <meta property="og:url" content="{{ $url }}" />
     <meta property="og:description" content="{{ $description }}" />
+    <meta property="og:image" content="{{ $imageUrl }}" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="600" />
+    
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="{{ unescapeHtml $title }}" />
+    <meta name="twitter:description" content="{{ $description }}" />
+    <meta name="twitter:image" content="{{ $imageUrl }}" />
 {{ end }}
