--- a/appview/pages/templates/repo/pulls/patch.html
+++ b/appview/pages/templates/repo/pulls/patch.html
@@ -34,14 +34,8 @@
 </section>
 {{ end }}
 
-{{ define "topbarLayout" }}
-  <header class="px-1 col-span-full" style="z-index: 20;">
-    {{ template "layouts/fragments/topbar" . }}
-  </header>
-{{ end }}
-
 {{ define "mainLayout" }}
-  <div class="px-1 col-span-full flex flex-col gap-4">
+  <div class="px-1 col-span-full flex-grow flex flex-col gap-4">
     {{ block "contentLayout" . }}
       {{ block "content" . }}{{ end }}
     {{ end }}
@@ -57,12 +51,6 @@
     </div>
     {{ end }}
   </div>
-{{ end }}
-
-{{ define "footerLayout" }}
-  <footer class="px-1 col-span-full mt-12">
-    {{ template "layouts/fragments/footer" . }}
-  </footer>
 {{ end }}
 
 {{ define "contentAfter" }}
