--- a/appview/pages/templates/layouts/fragments/footer.html
+++ b/appview/pages/templates/layouts/fragments/footer.html
@@ -1,5 +1,5 @@
 {{ define "layouts/fragments/footer" }}
-<div class="w-full p-8">
+<div class="w-full p-8 bg-white dark:bg-gray-800">
   <div class="mx-auto px-4">
     <div class="flex flex-col text-gray-600 dark:text-gray-400 gap-8">
       <!-- Desktop layout: grid with 3 columns -->
