--- a/appview/pages/templates/repo/commit.html
+++ b/appview/pages/templates/repo/commit.html
@@ -80,13 +80,13 @@
 {{end}}
 
 {{ define "topbarLayout" }}
-  <header class="px-1 col-span-full" style="z-index: 20;">
+  <header class="col-span-full" style="z-index: 20;">
     {{ template "layouts/fragments/topbar" . }}
   </header>
 {{ end }}
 
 {{ define "mainLayout" }}
-  <div class="px-1 col-span-full flex flex-col gap-4">
+  <div class="px-1 flex-grow col-span-full flex flex-col gap-4">
     {{ block "contentLayout" . }}
       {{ block "content" . }}{{ end }}
     {{ end }}
@@ -105,7 +105,7 @@
 {{ end }}
 
 {{ define "footerLayout" }}
-  <footer class="px-1 col-span-full mt-12">
+  <footer class="col-span-full mt-12">
     {{ template "layouts/fragments/footer" . }}
   </footer>
 {{ end }}
