--- a/appview/pages/templates/repo/pulls/interdiff.html
+++ b/appview/pages/templates/repo/pulls/interdiff.html
@@ -28,14 +28,8 @@
 
 {{ end }}
 
-{{ define "topbarLayout" }}
-  <header class="px-1 col-span-full" style="z-index: 20;">
-    {{ template "layouts/fragments/topbar" . }}
-  </header>
-{{ end }}
-
 {{ define "mainLayout" }}
-  <div class="px-1 col-span-full flex flex-col gap-4">
+  <div class="px-1 col-span-full flex-grow flex flex-col gap-4">
     {{ block "contentLayout" . }}
       {{ block "content" . }}{{ end }}
     {{ end }}
@@ -52,13 +46,6 @@
     {{ end }}
   </div>
 {{ end }}
-
-{{ define "footerLayout" }}
-  <footer class="px-1 col-span-full mt-12">
-    {{ template "layouts/fragments/footer" . }}
-  </footer>
-{{ end }}
-
 
 {{ define "contentAfter" }}
   {{ template "repo/fragments/interdiff" (list .RepoInfo.FullName .Interdiff .DiffOpts) }}
