appview: remove `@` from URLs and interface
old URLs that refer to users with the `@` are redirected to the version
without `@`. the leading motivation for this change is that valid
atproto handles do not contain the prefix. it is purely stylistic.

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/layouts/repobase.html
+++ b/appview/pages/templates/layouts/repobase.html
@@ -13,8 +13,8 @@
       </p>
       {{ end }}
       <div class="text-lg flex items-center justify-between">
-        <div>
-          <a href="/{{ .RepoInfo.OwnerWithAt }}">{{ .RepoInfo.OwnerWithAt }}</a>
+        <div class="flex items-center gap-2 flex-wrap">
+          {{ template "user/fragments/picHandleLink" .RepoInfo.OwnerDid }}
           <span class="select-none">/</span>
           <a href="/{{ .RepoInfo.FullName }}" class="font-bold">{{ .RepoInfo.Name }}</a>
         </div>
