appview/pulls: add link to PR source branch
Signed-off-by: Seongmin Lee <git@boltless.me>

--- a/appview/pages/templates/repo/pulls/fragments/pullHeader.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullHeader.html
@@ -42,15 +42,17 @@
             {{ if not .Pull.IsPatchBased }}
               from
               <span class="text-xs rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 mx-1/2 inline-flex items-center">
-                {{ if .Pull.IsForkBased }}
-                  {{ if .Pull.PullSource.Repo }}
-                  {{ $owner := resolve .Pull.PullSource.Repo.Did }}
-                  <a href="/{{ $owner }}/{{ .Pull.PullSource.Repo.Name }}" class="no-underline hover:underline">{{ $owner }}/{{ .Pull.PullSource.Repo.Name }}</a>:
-                  {{- else -}}
-                  <span class="italic">[deleted fork]</span>
-                  {{- end -}}
-                {{- end -}}
-                {{- .Pull.PullSource.Branch -}}
+                {{ if not .Pull.IsForkBased }}
+                {{ $repoPath := .RepoInfo.FullName }}
+                  <a href="/{{ $repoPath }}/tree/{{ pathEscape .Pull.PullSource.Branch }}" class="no-underline hover:underline">{{ .Pull.PullSource.Branch }}</a>
+                {{ else if .Pull.PullSource.Repo }}
+                {{ $repoPath := print (resolve .Pull.PullSource.Repo.Did) "/" .Pull.PullSource.Repo.Name }}
+                  <a href="/{{ $repoPath }}" class="no-underline hover:underline">{{ $repoPath }}</a>:
+                  <a href="/{{ $repoPath }}/tree/{{ pathEscape .Pull.PullSource.Branch }}" class="no-underline hover:underline">{{ .Pull.PullSource.Branch }}</a>
+                {{ else }}
+                  <span class="italic">[deleted fork]</span>:
+                  {{ .Pull.PullSource.Branch }}
+                {{ end }}
               </span>
             {{ end }}
         </span>
